final touches to reference model.

--- a/MLP_developer.ipynb
+++ b/MLP_developer.ipynb
@@ -10,21 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgensim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Word2Vec\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgensim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m simple_preprocess\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneural_network\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MLPClassifier\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m classification_report, accuracy_score\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -45,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +143,7 @@
        "4             0        0       0       0              0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +253,7 @@
        "4       0              0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,11 +264,446 @@
     "data_frame = data_frame.drop(columns=[\"id\", \"severe_toxic\"])\n",
     "data_frame.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comment_text</th>\n",
+       "      <th>toxic</th>\n",
+       "      <th>obscene</th>\n",
+       "      <th>threat</th>\n",
+       "      <th>insult</th>\n",
+       "      <th>identity_hate</th>\n",
+       "      <th>preprocessed_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[explanation, why, the, edits, made, under, my...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[aww, he, matches, this, background, colour, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[hey, man, really, not, trying, to, edit, war,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[more, can, make, any, real, suggestions, on, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[you, sir, are, my, hero, any, chance, you, re...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        comment_text  toxic  obscene  threat  \\\n",
+       "0  Explanation\\nWhy the edits made under my usern...      0        0       0   \n",
+       "1  D'aww! He matches this background colour I'm s...      0        0       0   \n",
+       "2  Hey man, I'm really not trying to edit war. It...      0        0       0   \n",
+       "3  \"\\nMore\\nI can't make any real suggestions on ...      0        0       0   \n",
+       "4  You, sir, are my hero. Any chance you remember...      0        0       0   \n",
+       "\n",
+       "   insult  identity_hate                                  preprocessed_text  \n",
+       "0       0              0  [explanation, why, the, edits, made, under, my...  \n",
+       "1       0              0  [aww, he, matches, this, background, colour, s...  \n",
+       "2       0              0  [hey, man, really, not, trying, to, edit, war,...  \n",
+       "3       0              0  [more, can, make, any, real, suggestions, on, ...  \n",
+       "4       0              0  [you, sir, are, my, hero, any, chance, you, re...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def preprocess(text):\n",
+    "    return simple_preprocess(text, deacc=True, min_len=2, max_len=15)\n",
+    "\n",
+    "data_frame['preprocessed_text'] = data_frame['comment_text'].apply(preprocess)\n",
+    "data_frame.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.word2vec.Word2Vec at 0x7fd320905ee0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train the Word2Vec model\n",
+    "embedding_size = 100\n",
+    "word2vec_model = Word2Vec(data_frame['preprocessed_text'], vector_size=embedding_size, window=5, min_count=2, workers=4)\n",
+    "word2vec_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert text to embeddings\n",
+    "def text_to_embedding(text):\n",
+    "    words = [word for word in text if word in word2vec_model.wv]\n",
+    "    if words:\n",
+    "        return np.mean(word2vec_model.wv[words], axis=0)\n",
+    "    else:\n",
+    "        return np.zeros(embedding_size)\n",
+    "\n",
+    "data_frame['embedding'] = data_frame['preprocessed_text'].apply(text_to_embedding)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comment_text</th>\n",
+       "      <th>toxic</th>\n",
+       "      <th>obscene</th>\n",
+       "      <th>threat</th>\n",
+       "      <th>insult</th>\n",
+       "      <th>identity_hate</th>\n",
+       "      <th>preprocessed_text</th>\n",
+       "      <th>embedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[explanation, why, the, edits, made, under, my...</td>\n",
+       "      <td>[1.0434402, -0.1309201, -0.24954712, -0.394823...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[aww, he, matches, this, background, colour, s...</td>\n",
+       "      <td>[0.6622115, -0.49376237, -0.121675886, -0.1719...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[hey, man, really, not, trying, to, edit, war,...</td>\n",
+       "      <td>[0.8088037, -0.50269395, -0.928083, -0.4291520...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[more, can, make, any, real, suggestions, on, ...</td>\n",
+       "      <td>[0.9010477, 0.030773602, -0.7089923, -0.733294...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[you, sir, are, my, hero, any, chance, you, re...</td>\n",
+       "      <td>[1.4950477, -0.61495525, -0.9125719, -1.188175...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        comment_text  toxic  obscene  threat  \\\n",
+       "0  Explanation\\nWhy the edits made under my usern...      0        0       0   \n",
+       "1  D'aww! He matches this background colour I'm s...      0        0       0   \n",
+       "2  Hey man, I'm really not trying to edit war. It...      0        0       0   \n",
+       "3  \"\\nMore\\nI can't make any real suggestions on ...      0        0       0   \n",
+       "4  You, sir, are my hero. Any chance you remember...      0        0       0   \n",
+       "\n",
+       "   insult  identity_hate                                  preprocessed_text  \\\n",
+       "0       0              0  [explanation, why, the, edits, made, under, my...   \n",
+       "1       0              0  [aww, he, matches, this, background, colour, s...   \n",
+       "2       0              0  [hey, man, really, not, trying, to, edit, war,...   \n",
+       "3       0              0  [more, can, make, any, real, suggestions, on, ...   \n",
+       "4       0              0  [you, sir, are, my, hero, any, chance, you, re...   \n",
+       "\n",
+       "                                           embedding  \n",
+       "0  [1.0434402, -0.1309201, -0.24954712, -0.394823...  \n",
+       "1  [0.6622115, -0.49376237, -0.121675886, -0.1719...  \n",
+       "2  [0.8088037, -0.50269395, -0.928083, -0.4291520...  \n",
+       "3  [0.9010477, 0.030773602, -0.7089923, -0.733294...  \n",
+       "4  [1.4950477, -0.61495525, -0.9125719, -1.188175...  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         [1.0434402, -0.1309201, -0.24954712, -0.394823...\n",
+       "1         [0.6622115, -0.49376237, -0.121675886, -0.1719...\n",
+       "2         [0.8088037, -0.50269395, -0.928083, -0.4291520...\n",
+       "3         [0.9010477, 0.030773602, -0.7089923, -0.733294...\n",
+       "4         [1.4950477, -0.61495525, -0.9125719, -1.188175...\n",
+       "                                ...                        \n",
+       "159566    [0.6632037, -0.4890748, -1.1266145, -0.7530023...\n",
+       "159567    [1.2571803, -0.55618274, -0.89554954, -1.50168...\n",
+       "159568    [0.00072255457, -0.6336445, -0.678324, -0.1280...\n",
+       "159569    [1.0233685, -0.42017877, -0.48933327, -0.41772...\n",
+       "159570    [0.89718443, -0.7670429, -1.0692644, -0.913098...\n",
+       "Name: embedding, Length: 159571, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame[\"embedding\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into training and test sets\n",
+    "X = np.stack(data_frame['embedding'].values)\n",
+    "y = data_frame['toxic'].values\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(hidden_layer_sizes=(128, 64), max_iter=1000, random_state=42)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Man said let there be memory hazards..\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(128, 64),max_iter=1000, activation='relu', solver='adam', random_state=42)\n",
+    "mlp.fit(X_train, y_train)\n",
+    "mlp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = mlp.predict(X_test)\n",
+    "y_non_toxic = mlp.predict_proba()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1, ..., 0, 1, 0])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.97      0.97     28859\n",
+      "           1       0.69      0.63      0.66      3056\n",
+      "\n",
+      "    accuracy                           0.94     31915\n",
+      "   macro avg       0.83      0.80      0.81     31915\n",
+      "weighted avg       0.94      0.94      0.94     31915\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_true=y_test, y_pred = y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9375528748237506\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(y_pred=y_pred, y_true=y_test))\n",
+    "print(\"yo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -294,12 +717,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "573df7cd1bb5cc135bbb2be04205b27e832066f15f23fbb822756a4880cfdb10"
    }
   }
  },
